# risk-calculator

./: .gitignore  =6.5.0  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LEGACY_CLEANUP_REPORT.md  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_core_functionality.py
.specify/memory/: constitution.md
docs/: CROSS_PLATFORM_VALIDATION.md  DEPLOYMENT_GUIDE.md
risk_calculator/: main.py  main_tkinter_deprecated.py  qt_main.py
risk_calculator/controllers/: base_controller.py  enhanced_base_controller.py  enhanced_controller_adapter.py  enhanced_main_controller.py  enhanced_menu_controller.py  equity_controller.py  future_controller.py  main_controller.py  option_controller.py  qt_base_controller.py  qt_equity_controller.py  qt_futures_controller.py  qt_main_controller.py  qt_options_controller.py
risk_calculator/integration/: __init__.py  enhanced_ui_integration.py
risk_calculator/models/: application_process_state.py  button_state.py  calculation_result.py  display_profile.py  equity_trade.py  field_validation_state.py  form_validation_state.py  future_trade.py  option_trade.py  risk_method.py  trade.py  ui_layout_state.py  validation_result.py  window_config_schema.py  window_configuration.py
risk_calculator/services/: application_lifecycle_service.py  button_state_service.py  configuration_service.py  enhanced_form_validation_service.py  enhanced_validation_service.py  qt_config_service.py  qt_display_service.py  qt_layout_service.py  qt_window_manager.py  risk_calculator.py  (+5 more)
scripts/: cleanup_legacy_code.py  cross_platform_validation.py
(+122 files in other folders)
