[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-calculator"
version = "1.0.0"
description = "Cross-platform desktop risk calculator for daytrading"
readme = "IMPLEMENTATION_SUMMARY.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Risk Calculator Team"}
]
keywords = ["trading", "risk-management", "position-sizing", "daytrading"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Office/Business :: Financial :: Investment",
]

# No runtime dependencies - using Python standard library only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
risk-calculator = "risk_calculator.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["risk_calculator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
]

[tool.uv.sources]
